code cleanup (Java 11 compatibility)